[gd_scene load_steps=2 format=3 uid="uid://bu6nglhh3u7t3"]

[ext_resource type="Script" path="res://addons/ai_dialog/APIPluginSettings.gd" id="1_r2a4m"]

[node name="ai_dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2a4m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainerAPI" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerAPI"]
layout_mode = 2
text = "API Token"

[node name="ApiKeyInput" type="LineEdit" parent="VBoxContainer/HBoxContainerAPI"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
placeholder_text = "sk-or-v1-..."

[node name="HBoxContainerModel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerModel"]
layout_mode = 2
text = "Model Name"

[node name="ModelInput" type="LineEdit" parent="VBoxContainer/HBoxContainerModel"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
placeholder_text = "meta-llama/llama-3.3-70b-instruct:free"

[node name="HBoxContainerAPIURL" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerAPIURL"]
layout_mode = 2
text = "API Endpoint"

[node name="ApiURLInput" type="LineEdit" parent="VBoxContainer/HBoxContainerAPIURL"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
placeholder_text = "https://openrouter.ai/api/v1/chat/completions"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Settings"
